WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118867
fourthTier: DFG shouldn't create CheckStructures for array accesses except if the ArrayMode implies an original array access
https://bugs.webkit.org/show_bug.cgi?id=118867
Summary
fourthTier: DFG shouldn't create CheckStructures for array accesses except if...
Filip Pizlo
Reported
2013-07-18 15:16:14 PDT
This allows us to kill off a bunch of code in the parser, in fixup, and to simplify ArrayProfile. It also makes it easier to ask any array-using node how to create its type check.
Attachments
the patch
(17.43 KB, patch)
2013-07-18 15:17 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-07-18 15:17:46 PDT
Created
attachment 207028
[details]
the patch
Mark Hahnenberg
Comment 2
2013-07-18 15:23:08 PDT
Comment on
attachment 207028
[details]
the patch r=me
Filip Pizlo
Comment 3
2013-07-18 16:31:21 PDT
Landed in
http://trac.webkit.org/changeset/152872
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug